# mgutils

./: .gitignore  CMakeLists.txt  README.md  install-deps.sh  runtests.sh
cmake/: mgutils.cmake
docs/: CMakeLists.txt
docs/cases/: jobpool_tests.cpp
examples/: CMakeLists.txt  jobpool_ex1.cpp  json_comparison.cpp  logger_ex.cpp  logger_ex2.cpp
include/mgutils/: CsvLoader.h  ErrorManager.h  EventManager.h  Exceptions.h  Files.h  HeartBeatChecker.h  JobPool.h  Json.cpp  Json.h  Logger.h  Scheduler.h  Utils.h  mgutils
include/mgutils/json/: Json.cpp  Json.h  JsonDocument.cpp  JsonDocument.h  JsonValue.cpp  JsonValue.h
include/mgutils/models/: Trade.h
src/: Logger.cpp
src/json/: JsonDocument.cpp
tests/: CMakeLists.txt  main.cpp
tests/cases/: csv_tests.cpp  error_tests.cpp  events_tests.cpp  files_tests.cpp  json_tests.cpp  logger_tests.cpp  scheduler_tests.cpp  utils_tests.cpp
tests/resources/: test1.csv  test_semicolon.csv
tests/resources/sub_dir/: nested_file.txt
